--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,7 +88,7 @@ jobs:
             npm install
             npm test
       - slack/notify:
-          channel: general
+          channel: '#general'
           event: fail
           template: basic_fail_1
                 
@@ -105,7 +105,7 @@ jobs:
             npm install
             npm test
       - slack/notify:
-          channel: general
+          channel: '#general'
           event: fail
           template: basic_fail_1
             
