--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,8 +89,22 @@ jobs:
             npm test
       - slack/notify:
           channel: '#general'
-          event: fail
-          template: basic_fail_1
+          custom: |
+            {
+              "blocks": [
+                {
+                  "type": "section",
+                  "fields": [
+                    {
+                      "type": "plain_text",
+                      "text": "*This is a text notification*",
+                      "emoji": true
+                    }
+                  ]
+                }
+              ]
+            }
+          event: always
                 
   test-backend:
     <<: *defaults
